--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"
     />
-    <title>Vite + React + TS</title>
+    <title>Mamba No 5</title>
+
   </head>
   <body>
     <main>
       <div id="root"></div>
     </main>
-    <script type="module" src="/src/logic.ts"></script>
+    <script type="module" src="/src/logic/logic.ts"></script>
     <script type="module" src="/src/client.tsx"></script>
   </body>
 </html>
